--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,10 @@
 ---
-import Layout from '@/layouts/Layout.astro';
-import { ModeToggle } from "@/components/ToggleTheme.tsx";
+import Layout from "@/layouts/Layout.astro";
+import Hero from "@/components/widgets/hero.astro";
 ---
 
 <Layout title="Anish Shobith P S">
 	<main>
-		hello
-		<ModeToggle client:load />
+		<Hero />
 	</main>
 </Layout>
-
