--- a/src/components/widgets/hero.astro
+++ b/src/components/widgets/hero.astro
@@ -1,48 +1,83 @@
 ---
 import { Image } from "astro:assets";
+import { Icon } from "astro-icon/components";
 
 import ProfileImage from "@/assets/profile.png";
+
+interface SocialItem {
+  name: string;
+  url: string;
+}
+
+const socials: SocialItem[] = [
+  {
+    name: "github",
+    url: "https://github.com/anishshobithps",
+  },
+  {
+    name: "instagram",
+    url: "https://instagram.com/anishshobithps",
+  },
+  {
+    name: "twitter",
+    url: "https://x.com/anishshobithps",
+  },
+  {
+    name: "linkedin",
+    url: "https://linkedin.com/in/anishshobithps",
+  },
+];
 ---
 
 <section class="body-font">
+  <div
+    class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center"
+  >
     <div
-        class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center"
+      class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center"
     >
-        <div
-            class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center"
+      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium">
+        Welcome to my website,
+        <br class="hidden lg:inline-block" />I am Portfolio
+      </h1>
+      <p class="mb-8 leading-relaxed">
+        Copper mug try-hard pitchfork pour-over freegan heirloom neutra air
+        plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk
+        tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard
+        chambray.
+      </p>
+      <div class="flex gap-3">
+        {
+          socials.map((item) => (
+            <a href={item.url}>
+              <Icon name={`mdi:${item.name}`} class="size-10 mb-4" />
+              <span class="sr-only">{item.name}</span>
+            </a>
+          ))
+        }
+      </div>
+      <div class="flex justify-center">
+        <button
+          class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"
+          >Button</button
         >
-            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium">
-                Welcome to my website,
-                <br class="hidden lg:inline-block" />I am Portfolio
-            </h1>
-            <p class="mb-8 leading-relaxed">
-                Copper mug try-hard pitchfork pour-over freegan heirloom neutra
-                air plant cold-pressed tacos poke beard tote bag. Heirloom echo
-                park mlkshk tote bag selvage hot chicken authentic tumeric
-                truffaut hexagon try-hard chambray.
-            </p>
-            <div class="flex justify-center">
-                <button
-                    class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"
-                    >Button</button
-                >
-                <button
-                    class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg"
-                    >Button</button
-                >
-            </div>
-        </div>
-        <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-            <!-- <img
+        <button
+          class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg"
+          >Button</button
+        >
+      </div>
+    </div>
+    <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+      <!-- <img
                 class="object-cover object-center rounded"
                 alt="hero"
                 src="https://dummyimage.com/720x600"
             /> -->
-            <Image
-                src={ProfileImage}
-                alt="Anish Shobith P S"
-                class="object-cover object-center rounded"
-            />
-        </div>
+      <Image
+        src={ProfileImage}
+        alt="Anish Shobith P S"
+        class="object-cover object-center rounded"
+      />
     </div>
+  </div>
 </section>
